added junction example

--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -4,9 +4,8 @@
 %%%We use logic to formally reason about the world around us in an abstract way. At the most basic level %%%we are creating abstract propositions, sentences from these propositions and then using formal rules %%%to deal with these propositions and to derive new information or insight. In the following we give a %%%general introduction to logic and describe some of the formalisms used in this thesis. This starts with %%%syntax and semantics of propositional and first order logic.
 This thesis is concerned with using formal methods to verify the correctness of programs. This chapter is concerned one technique in particular that is used to obtain verified programs, namely \emph{program extraction} from proofs as implemented by the interactive theorem prover Minlog. The theorem proven typically specifies the inputs of the system as assumptions and the output of the program as the statement to be proven. A constructive proof is given which describes how to transform the inputs into the required outputs. In the Minlog system the proof is stored as a proof term which can interpretted as a program in the lambda calculus. Once such a proof term has been obtained, it can be automatically translated by the Minlog system into a variety of different functional programming languages. This is due to the Curry-Howard correspondence \cite{HC34, HC58, WH80} which states that every constructive proof can also be seen as a program. It enables a proof system such as natural deduction  can be directly interpreted as a model of computation i.e. the lambda calculus.  A general introduction to program extraction from proofs can be found in \cite{SW11}. This thesis assumes a general background in logic, good general introduction to logic from a proof theoretic perspective is \cite{HandBookProof}. 
 
-\subsection*{Current Research Directions in Program Extraction}
-
-Program extraction from imperative programs
+\subsection*{Related Work in the Area of Program Extraction}
+The area number of case studies in the area of extracting programs from proofs. The Minlog system has been used extraction of a normalisation-by-evaulation algorithm for the lambda calculus \cite{UB06}. There is also considerable work in the area of exact real number computation \cite{UB08} which has made use of Coalgebras and Coinduction \cite{UB11}. 
 
 
 \subsection*{Other Theorem Provers with Program Extraction Capabilities}
