--- a/lit.bib
+++ b/lit.bib
@@ -224,6 +224,17 @@
   pages = {25--49}
 }
 
+@ARTICLE{UB08,
+  author = {Berger, U. and Hou, T.},
+  title = {Coinduction for Extact Real Number Compu},
+  journal = {Theory of Computing Systems},
+  year = {2008},
+  volume = {43},
+  pages = {394--209},
+  owner = {andylawrence},
+  timestamp = {2014.06.18}
+}
+
 @ARTICLE{AL13a,
   author = {Berger, U. and Lawrence, A. and Nordvall-Forsberg, F. and Seisenberger,
 	M.},
@@ -242,9 +253,9 @@
 	M.},
   title = {Minlog - {A} {T}ool for {P}rogram {E}xtraction {S}upporting {A}lgebras
 	and {C}oalgebras},
-  booktitle = {CALCO 2011},
+  booktitle = {CALCO-Tools 2011},
   year = {2011},
-  editor = {Andrea Corradini and Bartek Klin and Corina C\^{\i}rstea},
+  editor = {Corradini, A. and Klin, B. and  C\^{\i}rstea, C.},
   volume = {6859},
   series = {Lecture Notes in Computer Science},
   pages = {393--399},
