--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -142,7 +142,7 @@ eq {REST < O1 : Train |  dist : D1 , ma : M1 >
    < O2 : Train |  dist : D2 , ma : M2 >} |= nomaoverlap(O1',O2') = 
    (O1 == O1') and (O2 == O2') and noolap(D1,M1,D2,M2) .
 \end{lstlisting}
-Here we have matched two object identifiers and natural numbers and called a boolean function \texttt{noolap} on those variables. This definition features an external operation which computes a boolean depending on whether a set of inequalities are satisfied. 
+Here we have matched two object identifiers and natural numbers and called a boolean function \texttt{noolap} on those variables. This definition features an external operation which computes a boolean depending on whether a set of inequalities are satisfied. \textbf{Note to self: Update this safety property}
 
 \begin{lstlisting}[caption = The no overlap operation]
 eq noolap(D1,M1,D2,M2) = 
@@ -176,7 +176,13 @@ Result Bool :
   true
 \end{lstlisting}
 
-Unfortunately the Real Time Maude LTL model checker can not detect the congruence between difference configurations of control system. Therefore the state space is infinite and it is impossible to do untimed model checking on the above model checking problem. It is however possible to do timed model checking within a reasonable time limit that allows for all behaviours of the system to be verified.
+Unfortunately the Real Time Maude LTL model checker can not detect the congruence between difference configurations of control system. Therefore the state space is infinite and it is impossible to do untimed model checking on the above model checking problem for the pentagon example. It is however possible to do timed model checking within a reasonable time limit that allows for all behaviours of the system to be verified. The junction example does not suffer from this problem as the state space is finite and in addition, it has additional mechanisms to remove non-determinism from the model which dramatically cuts down on the state space.
+
+
+\section{Results}
+The following table presents the times taken to verify the 4 safety conditions MA1, MA2, P1 and P2:
+
+ 
 
 \section{Conclusion}
  We have presented the first attempt at modelling and verifying the combined ERTMS and interlocking system.
